# C-Statistics-Library

./: CMakeLists.txt  README.md  estatistics.c  estatistics.h  test_cstats  teste.c
.github/workflows/: ci.yml
cmake/: compiler_warnings.cmake
examples/: teste  teste.c
include/: cstats.h
src/: cstats.c  estatistics.c  statistics.c
tests/: test_cstats.c
